# Rust-Webserver

./: Cargo.toml  README.md
src/: lib.rs  main.rs
static/: index.html
tests/: integration_test.rs
